--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -4,8 +4,18 @@ general {
 	interval = 5
 }
 
+order += "cpu_usage"
+order += "memory"
 order += "battery 0"
 order += "tztime local"
+
+cpu_usage {
+   format = "CPU: %usage "
+}
+
+memory {
+   format = "RAM: %used/%total "
+}
 
 battery 0 {
 	format = "%status %remaining %percentage"
